fix : visitor profile country name overflow issue

--- a/plugins/Live/stylesheets/visitor_profile.less
+++ b/plugins/Live/stylesheets/visitor_profile.less
@@ -290,6 +290,8 @@
         white-space: nowrap;
         position: absolute;
         left: 26px;
+        right: 0px;
+        text-overflow: ellipsis;
       }
     }
 
